Kalpesh did this change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <span>Name: </span><input type="text" [(ngModel)]="name"/>
 <p>{{name}}</p>
 <div>This is a test line which I am adding.</div>
+<h2>THis line is added in Kalpesh branch</h2>
